--- a/plugin.xml
+++ b/plugin.xml
@@ -2,8 +2,9 @@
 
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
     id="io.applink.cordova.AppLinkIOPlugin"
-    version="1.0.1">
-    <name>AppLink.io</name>
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    version="1.5.2">
+    <name>AppLinkIO</name> 
     <description>AppLink.io SDK Plugin for Cordova</description>
     <license>Apache 2.0</license>
     <keywords>applink,analytics,performance,marketing,engagement</keywords>
@@ -27,7 +28,7 @@
         <header-file src="src/ios/AppLinkIOPlugin.h" />
         <source-file src="src/ios/AppLinkIOPlugin.m" />
 
-        <framework src="AppLinkIO" type="podspec" spec="~> 1.1.4" />
+        <framework src="AppLinkIO" type="podspec" spec="~> 2.2.0" />
 
     </platform>
 
